--- a/AI Communication Coach.ipynb
+++ b/AI Communication Coach.ipynb
@@ -109,38 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "64050d24",
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to the AI Communication Coach!\n",
-      "Choose input method (s - speech, t - text, f - file): t\n",
-      "Enter your text: negative vibes\n",
-      "Processing your input...\n",
-      "Analysis results:\n",
-      "  - Number of words: 2\n",
-      "  - Keywords: negative, vibes\n",
-      "  - Sentiment: Negative\n"
-     ]
-    }
-   ],
-   "source": [
-    "main()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "434be297",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "main()"
+   ]
   }
  ],
  "metadata": {
